# tax-compliance-radar

./: .gitignore  CLAUDE.md  README.md
backend/: pyproject.toml  pytest.ini
backend/data/: compliance_rules.json  countries.yaml
backend/data/regulations/: 01_vat_registration_rules.md  02_low_value_goods_policy_2026.md  03_platform_withholding_rules.md  04_monthly_reporting_audit.md  10_th_vat_registration_threshold.md  11_th_etax_invoice.md  12_th_tiktok_shop_vat.md  13_th_monthly_filing.md  14_id_pmk_131_2026.md  15_vn_einvoice_78_2026.md  16_vn_refund_65_2026.md  17_id_pph22_se33_2026.md  18_cn_foreign_trade_refund.md  19_my_sst_budget_2027.md  20_sg_gst_ovr.md  21_ph_dst_ra11976.md  22_th_nbtc_act_2551.md  23_th_rd_high_volume_audit.md  24_th_foreign_business_act.md  25_my_lvg_act.md  26_id_kup_law.md  27_id_api_npik.md  28_my_rmcd_sst_guide.md  29_id_apa_types.md  30_id_article23.md  31_id_article26_foreign_taxpayer.md  32_id_coretax_impl.md  33_id_coretax_intro.md  34_id_coretax_manual_hub.md  35_id_coretax_reg_manual.md  36_id_corporate_index.md  37_id_customs_faq.md  38_id_dgt_form_old_2019.md  39_id_dgt_form_pmk112_2025.md  40_id_digital_vat.md  41_id_foreign_trade_rep_office.md  42_id_marketplace_pph.md  43_id_permanent_establishment.md  44_id_pmk172_2023_transfer_pricing.md  45_id_pmk37_2025_faq.md  (+46 more)
backend/data/rules/: README.md  (+4 more)
backend/scripts/: check_config.py  gen_sample_contract.py  ingest_raw_regulations.py  init_all.sh  load_regulations.py  rebuild_vector_store.sh  start.sh  test_embeddings.py  test_ollama.py
backend/tests/: conftest.py
(+115 files in other folders)
