[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "tax-compliance-radar"
version = "0.1.0"
description = "Tax compliance radar MVP for Thailand VAT"
readme = "../README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1",
  "sqlalchemy>=2.0.30",
  "ollama>=0.4.0",
  "openai>=1.0.0",
  "httpx>=0.27.0",
  "chromadb==0.5.3",
  "onnxruntime<1.20",
  "pyyaml>=6.0.3",
  "json-repair>=0.59.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tax_compliance_radar"]
